--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body {
     text-align: center;
 }
+
+.column-left {
+    float: left;
+    width: 33%;
+}
+.column-right {
+    float: right;
+    width: 33%;
+}
+.column-center {
+    display: inline-block;
+    width: 33%;
+}
